--- a/src/App.css
+++ b/src/App.css
@@ -1853,7 +1853,8 @@ body, html {
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 550px;
+  height: auto;
+  min-height: 550px;
 }
 
 .pricing-card.featured {
@@ -1919,7 +1920,7 @@ body, html {
   flex-grow: 1;
   padding: 25px;
   text-align: center;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .price {
@@ -1927,7 +1928,7 @@ body, html {
   font-weight: 700;
   color: var(--primary-dark);
   margin-bottom: 10px;
-  height: 60px;
+  height: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1946,7 +1947,16 @@ body, html {
   border-radius: 20px;
   font-weight: 600;
   margin-bottom: 20px;
-  height: 20px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Add a spacer div for cards without savings */
+.price-spacer {
+  height: 30px;
+  margin-bottom: 20px;
 }
 
 .pricing-features {
@@ -1954,7 +1964,8 @@ body, html {
   padding: 0;
   margin: 25px 0;
   text-align: left;
-  height: 200px;
+  min-height: 200px;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -1976,14 +1987,13 @@ body, html {
 }
 
 .pricing-button-container {
-  height: 50px;
+  margin-top: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .pricing-button {
-  margin-top: auto;
   display: inline-block;
   background-color: var(--primary);
   color: white;
